# llm-toolkit

./: .env.template  .gitignore  README.md  hello.py  main.py  pyproject.toml  ruff.toml
src/agents/: base_agent.py  my_agent.py  tool_agent.py
src/api/: base_app.py
src/api/middlewares/: context_middleware.py  conv_id_middleware.py  logging_middleware.py  tracing_middleware.py
src/api/models/: workflows_models.py
src/api/routers/: mcp_router.py  tasks.py  tasks_router.py  workflows_router.py
src/chains/: base_chain.py  gemini_qa.py  ollama_qa.py
src/config/: __init__.py  base.py  constants.py  environments.py  llm_config.py  llm_providers.yaml  utils.py  vault.py
src/config/env_configs/: dev.yaml
src/memory/: base_memory.py  in_memory.py
src/models/: gemini_client.py  ollama_client.py
src/observability/: context.py  decorators.py  instrument.py
src/orchestrators/: api_orchestrator.py  base_orchestrator.py  tool_agent_workflow_orchestrator.py
src/providers/: gemini_client.py  models.py
src/tools/: base_tool.py  multiply.py  random_number.py
src/utils/: config_loader.py  io_utils.py  logger.py  path_finder.py  timer.py  utils_io.py
src/workflows/: doc_qa.py  gemini_qa.py  my_workflow.py  new_workflow.py  ollama_qa.py
