[project]
name = "llm-toolkit"
version = "0.1.0"
description = "This repo contains all the basic elements to construct effective LLM tasks."
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "adalflow>=0.2.6",
    "arize-phoenix-otel>=0.8.0",
    "fastapi>=0.115.11",
    "google-genai>=0.4.0",
    "ipykernel>=6.29.5",
    "langfuse>=2.59.6",
    "loguru>=0.7.3",
    "numpy>=1.26.4",
    "ollama>=0.4.5",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-instrumentation>=0.51b0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-sdk>=1.30.0",
    "pathlib>=1.0.1",
    "qdrant-client[fastembed]>=1.13.2",
    "uvicorn>=0.34.0",
]
