[project]
name = "llm-toolkit"
version = "0.1.0"
description = "Provides core components (agents, tools, workflows, memory, observability) for constructing effective and extensible LLM applications."
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "adalflow>=0.2.6",
    "arize-phoenix>=8.12.1",
    "arize-phoenix-otel>=0.8.0",
    "fastapi>=0.115.11",
    "google-genai>=0.4.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "numpy>=1.26.4",
    "ollama>=0.4.5",
    "opentelemetry-api>=1.30.0",
    "pathlib>=1.0.1",
    "pydantic-settings>=2.9.1",
    "python-json-logger>=3.3.0",
    "qdrant-client[fastembed]>=1.13.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
observability = [
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-instrumentation>=0.51b0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-requests>=0.51b0",
    "openinference-instrumentation-google-genai>=0.1.2",
    "openinference-instrumentation-openai>=0.1.30",
    "opentelemetry-sdk>=1.30.0",
]

[project.scripts]
pytest-run = "pytest:main"
